commiti mudanças dia 16-5

--- a/exercicio.html
+++ b/exercicio.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" type="text/css" href="exercicio.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css" />
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700i" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+
     <style>
 
     </style>
@@ -19,134 +22,155 @@
 </head>
 
 <body>
+    <nav class="menu-activea">
+        <h1>
+            <i></i> MENU
+        </h1>
+        <ul>
+            <li>HOME</li>
+            <li>Noticias</li>
+            <li>Novidades</li>
+            <li>Ajude-nos</li>
+            <li>Login</li>
+            <li>Cadastre-se</li>
+            <li>Suporte</li>
+        </ul>
+    </nav>
 
 
-    <div class="legendimg  pb-5">
-        <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm">
-            <img src="img/logo.png" width="120" class="lo">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-            <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Styles <span class="sr-only">(página atual)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Cadastre-se</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Noticias</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#"></a>
-                            <a class="dropdown-item" href="#">Outra ação</a>
-                            <a class="dropdown-item" href="#">Algo mais aqui</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Link isolado</a>
-                        </div>
-                    </li>
+    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Styles <span class="sr-only">(página atual)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Cadastre-se</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Noticias</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#"></a>
+                    <a class="dropdown-item" href="#">Outra ação</a>
+                    <a class="dropdown-item" href="#">Algo mais aqui</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Link isolado</a>
+                </div>
+            </li>
 
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                    <button type="button" class="btn btn-outline-danger">Pesquisar</button>
-                </form>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+            <button type="button" class="btn btn-outline-danger">Pesquisar</button>
+        </form>
+    </div>
+    </nav>
+
+    <div class="jumbotron jumbotron-fluid bg-white border-bottom shadow-sm bg-title">
+        <div class="container col-5">
+
+        </div>
+    </div>
+
+    <section class="swiper-container loading">
+        <div class="swiper-wrapper">
+
+            <div class="swiper-slide slide1">
+                <div class="content">
+                    <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">The flash</p>
+                    <span class="caption" data-swiper-parallax="-20%">The Flash está chegando ao fim de sua sexta temporada, com o último episódio indo ao ar na próxima semana. Confira as ganha imagens do ultimo episodio da temporada. </span>
+                    <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
+                </div>
             </div>
-        </nav>
 
-        <div class="jumbotron jumbotron-fluid bg-title border-bottom shadow-sm">
-            <div class="container col-5">
-                <img src="img/logo.png">
+            <div class="swiper-slide slide2">
+                <div class="content">
+                    <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Arrow</p>
+                    <span class="caption" data-swiper-parallax="-20%">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                    <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
+                </div>
+            </div>
+
+            <div class="swiper-slide slide3">
+
+                <div class="content">
+                    <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Epic.</p>
+                    <span class="caption" data-swiper-parallax="-20%">A Epic Games liberou nesta quinta-feira (14) o game Grand Theft Auto V (GTA V) de graça em sua loja virtual.  Baixa até o dia 21 de Maio.</span>
+                    <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
+                </div>
+            </div>
+
+            <div class="swiper-slide slide4">
+                <div class="content">
+                    <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7"> Assassin's </p>
+                    <span class="caption" data-swiper-parallax="-20%">A série Assassin's Creed é uma das mais populares na actual indústria dos videojogos, mas a revelação do próximo jogo, Valhalla, está a bater recordes não só para a série como para a Ubisoft.</span>
+                    <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
+                </div>
+            </div>
+
+            <div class="swiper-slide slide5">
+                <div class="content">
+                    <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Fortnite</p>
+                    <span class="caption" data-swiper-parallax="-20%">Fortnite arrecadou US$ 1 bilhão em microtransações nas plataformas mobile Android e iOS, diz o site Sensor Tower, que monitora o desempenho financeiro de apps para celular.</span>
+                    <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
+                </div>
             </div>
         </div>
+    </section>
 
-        <section class="swiper-container loading">
-            <div class="swiper-wrapper">
 
-                <div class="swiper-slide slide1">
-                    <div class="content">
-                        <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">The flash</p>
-                        <span class="caption" data-swiper-parallax="-20%">The Flash está chegando ao fim de sua sexta temporada, com o último episódio indo ao ar na próxima semana. Confira as ganha imagens do ultimo episodio da temporada. </span>
-                        <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
-                    </div>
-                </div>
 
-                <div class="swiper-slide slide2">
-                    <div class="content">
-                        <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Arrow</p>
-                        <span class="caption" data-swiper-parallax="-20%">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
-                        <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
-                    </div>
-                </div>
 
-                <div class="swiper-slide slide3">
 
-                    <div class="content">
-                        <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Epic.</p>
-                        <span class="caption" data-swiper-parallax="-20%">A Epic Games liberou nesta quinta-feira (14) o game Grand Theft Auto V (GTA V) de graça em sua loja virtual.  Baixa até o dia 21 de Maio.</span>
-                        <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
-                    </div>
-                </div>
 
-                <div class="swiper-slide slide4">
-                    <div class="content">
-                        <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7"> Assassin's </p>
-                        <span class="caption" data-swiper-parallax="-20%">A série Assassin's Creed é uma das mais populares na actual indústria dos videojogos, mas a revelação do próximo jogo, Valhalla, está a bater recordes não só para a série como para a Ubisoft.</span>
-                        <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
-                    </div>
-                </div>
 
-                <div class="swiper-slide slide5">
-                    <div class="content">
-                        <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Fortnite</p>
-                        <span class="caption" data-swiper-parallax="-20%">Fortnite arrecadou US$ 1 bilhão em microtransações nas plataformas mobile Android e iOS, diz o site Sensor Tower, que monitora o desempenho financeiro de apps para celular.</span>
-                        <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
-                    </div>
-                </div>
+
+
+
+
+
+
+
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+        <div class="row">
+            <div class="col-12 col-md">
+                <img class="mb-2" src="img/logo.png" alt="" width="84">
+                <small class="d-block mb-3 text-muted">&copy; 2020-2021</small>
             </div>
-        </section>
-
-        <footer class="pt-4 my-md-5 pt-md-5 border-top">
-            <div class="row">
-                <div class="col-12 col-md">
-                    <img class="mb-2" src="img/logo.png" alt="" width="84">
-                    <small class="d-block mb-3 text-muted">&copy; 2020-2021</small>
-                </div>
-                <div class="col-6 col-md">
-                    <h5 class=" text-danger">Features</h5>
-                    <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Algo legal</a></li>
-                        <li><a class="text-muted" href="#">Feature aleatória</a></li>
-                        <li><a class="text-muted" href="#">Recursos para times</a></li>
-                        <li><a class="text-muted" href="#">Coisas para desenvolvedores</a></li>
-                        <li><a class="text-muted" href="#">Outra coisa legal</a></li>
-                        <li><a class="text-muted" href="#">Último item</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md">
-                    <h5 class="text-danger">Fontes</h5>
-                    <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Fonte</a></li>
-                        <li><a class="text-muted" href="#">Nome da fonte</a></li>
-                        <li><a class="text-muted" href="#">Outra fonte</a></li>
-                        <li><a class="text-muted" href="#">Fonte final</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md">
-                    <h5 class="text-danger">Sobre</h5>
-                    <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Equipe</a></li>
-                        <li><a class="text-muted" href="#">Locais</a></li>
-                        <li><a class="text-muted" href="#">Privacidade</a></li>
-                        <li><a class="text-muted" href="#">Termos</a></li>
-                    </ul>
-                </div>
+            <div class="col-6 col-md">
+                <h5 class=" text-danger">Features</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Algo legal</a></li>
+                    <li><a class="text-muted" href="#">Feature aleatória</a></li>
+                    <li><a class="text-muted" href="#">Recursos para times</a></li>
+                    <li><a class="text-muted" href="#">Coisas para desenvolvedores</a></li>
+                    <li><a class="text-muted" href="#">Outra coisa legal</a></li>
+                    <li><a class="text-muted" href="#">Último item</a></li>
+                </ul>
             </div>
-        </footer>
+            <div class="col-6 col-md">
+                <h5 class="text-danger">Fontes</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Fonte</a></li>
+                    <li><a class="text-muted" href="#">Nome da fonte</a></li>
+                    <li><a class="text-muted" href="#">Outra fonte</a></li>
+                    <li><a class="text-muted" href="#">Fonte final</a></li>
+                </ul>
+            </div>
+            <div class="col-6 col-md">
+                <h5 class="text-danger">Sobre</h5>
+                <ul class="list-unstyled text-small">
+                    <li><a class="text-muted" href="#">Equipe</a></li>
+                    <li><a class="text-muted" href="#">Locais</a></li>
+                    <li><a class="text-muted" href="#">Privacidade</a></li>
+                    <li><a class="text-muted" href="#">Termos</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     </div>
 
     <!--codigo movimentaçao-->
@@ -179,6 +203,50 @@
         mySwiper.init();
     </script>
     <!--Fim-->
+
+    <script>
+        (function() {
+
+            var nav = $('nav'),
+                menu = $('nav h1'),
+                main = $('main'),
+                open = false,
+                hover = false;
+
+            menu.on('click', function() {
+                open = !open ? true : false;
+                nav.toggleClass('menu-active');
+                main.toggleClass('menu-active');
+                nav.removeClass('menu-hover');
+                main.removeClass('menu-hover');
+                console.log(open);
+            });
+            menu.hover(
+                function() {
+                    if (!open) {
+                        nav.addClass('menu-hover');
+                        main.addClass('menu-hover');
+                    }
+                },
+                function() {
+                    nav.removeClass('menu-hover');
+                    main.removeClass('menu-hover');
+                }
+            );
+
+        })();
+    </script>
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
