--- a/exercicio.html
+++ b/exercicio.html
@@ -81,7 +81,7 @@
             <div class="swiper-slide slide1">
                 <div class="content">
                     <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">The flash</p>
-                    <span class="caption" data-swiper-parallax="-20%">The Flash está chegando ao fim de sua sexta temporada, com o último episódio indo ao ar na próxima semana. Confira as ganha imagens do ultimo episodio da temporada. </span>
+                    <span class="caption" data-swiper-parallax="-20%">The Flash está chegando ao fim de sua sexta temporada, com o último episódio indo ao ar na próxima semana... </span>
                     <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
                 </div>
             </div>
@@ -89,7 +89,7 @@
             <div class="swiper-slide slide2">
                 <div class="content">
                     <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Arrow</p>
-                    <span class="caption" data-swiper-parallax="-20%">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                    <span class="caption" data-swiper-parallax="-20%">Parece que ainda há esperança para que Arqueiro Verde e as Canárias se torne uma série fixa na grade da CW...</span>
                     <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
                 </div>
             </div>
@@ -98,7 +98,7 @@
 
                 <div class="content">
                     <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Epic.</p>
-                    <span class="caption" data-swiper-parallax="-20%">A Epic Games liberou nesta quinta-feira (14) o game Grand Theft Auto V (GTA V) de graça em sua loja virtual.  Baixa até o dia 21 de Maio.</span>
+                    <span class="caption" data-swiper-parallax="-20%">A Epic Games liberou nesta quinta-feira (14) o game Grand Theft Auto V (GTA V) de graça em sua loja virtual...</span>
                     <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
                 </div>
             </div>
@@ -106,7 +106,7 @@
             <div class="swiper-slide slide4">
                 <div class="content">
                     <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7"> Assassin's </p>
-                    <span class="caption" data-swiper-parallax="-20%">A série Assassin's Creed é uma das mais populares na actual indústria dos videojogos, mas a revelação do próximo jogo, Valhalla, está a bater recordes não só para a série como para a Ubisoft.</span>
+                    <span class="caption" data-swiper-parallax="-20%">A série Assassin's Creed é uma das mais populares na actual indústria dos videojogos, mas a revelação do próximo jogo, Valhalla...</span>
                     <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
                 </div>
             </div>
@@ -114,7 +114,7 @@
             <div class="swiper-slide slide5">
                 <div class="content">
                     <p class="title" data-swiper-parallax="-30%" data-swiper-parallax-scale=".7">Fortnite</p>
-                    <span class="caption" data-swiper-parallax="-20%">Fortnite arrecadou US$ 1 bilhão em microtransações nas plataformas mobile Android e iOS, diz o site Sensor Tower, que monitora o desempenho financeiro de apps para celular.</span>
+                    <span class="caption" data-swiper-parallax="-20%">Fortnite arrecadou US$ 1 bilhão em microtransações nas plataformas mobile Android e iOS...</span>
                     <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
                 </div>
             </div>
