--- a/exercicio.html
+++ b/exercicio.html
@@ -120,126 +120,175 @@
             </div>
         </div>
     </section>
+    <!--fim dos slides-->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
-        <div class="row">
-            <div class="col-12 col-md">
-                <img class="mb-2" src="img/logo.png" alt="" width="84">
-                <small class="d-block mb-3 text-muted">&copy; 2020-2021</small>
-            </div>
-            <div class="col-6 col-md">
-                <h5 class=" text-danger">Features</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Algo legal</a></li>
-                    <li><a class="text-muted" href="#">Feature aleatória</a></li>
-                    <li><a class="text-muted" href="#">Recursos para times</a></li>
-                    <li><a class="text-muted" href="#">Coisas para desenvolvedores</a></li>
-                    <li><a class="text-muted" href="#">Outra coisa legal</a></li>
-                    <li><a class="text-muted" href="#">Último item</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5 class="text-danger">Fontes</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Fonte</a></li>
-                    <li><a class="text-muted" href="#">Nome da fonte</a></li>
-                    <li><a class="text-muted" href="#">Outra fonte</a></li>
-                    <li><a class="text-muted" href="#">Fonte final</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5 class="text-danger">Sobre</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Equipe</a></li>
-                    <li><a class="text-muted" href="#">Locais</a></li>
-                    <li><a class="text-muted" href="#">Privacidade</a></li>
-                    <li><a class="text-muted" href="#">Termos</a></li>
-                </ul>
+    <hr width="60%">
+    <div class="conteiner-fluid ">
+        <div class="row mb-2">
+            <div class="col-md-7">
+                <div class="card flex-md-row mb-4 shadow-sm h-md-250">
+                    <div class="card-body d-flex flex-column align-items-start">
+                        <strong class="d-inline-block mb-2 text-danger">Games</strong>
+                        <h3 class="mb-0">
+                            <a class="text-dark" href="#">Valorant</a>
+                        </h3>
+                        <div class="mb-2 text-muted">15 de Mai</div>
+                        <p class="card-text mb-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident adipisci, quas saepe repudiandae neque mollitia possimus. </p>
+                        <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
+                    </div>
+                    <img class="card-img-right flex-auto d-none d-lg-block" width="79%" src="img/not7.jpg" alt="Card image cap">
+                </div>
             </div>
         </div>
-    </footer>
-    </div>
+        <hr width="60%">
+        <div class="conteiner-fluid ">
+            <div class="row mb-2">
+                <div class="col-md-7">
+                    <div class="card flex-md-row mb-4 shadow-sm h-md-250">
+                        <div class="card-body d-flex flex-column align-items-start">
+                            <strong class="d-inline-block mb-2 text-danger">Games</strong>
+                            <h3 class="mb-0">
+                                <a class="text-dark" href="#">GTA V</a>
+                            </h3>
+                            <div class="mb-2 text-muted">20 de Mai</div>
+                            <p class="card-text mb-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident adipisci, quas saepe repudiandae neque mollitia possimus. </p>
+                            <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
+                        </div>
+                        <img class="card-img-right flex-auto d-none d-lg-block" width="37.5%" src="img/not8.jpg" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
+            <hr width="60%">
+            <div class="conteiner-fluid ">
+                <div class="row mb-2">
+                    <div class="col-md-7">
+                        <div class="card flex-md-row mb-4 shadow-sm h-md-250">
+                            <div class="card-body d-flex flex-column align-items-start">
+                                <strong class="d-inline-block mb-2 text-danger">Games</strong>
+                                <h3 class="mb-0">
+                                    <a class="text-dark" href="#">Valorant</a>
+                                </h3>
+                                <div class="mb-2 text-muted">16 de Mai</div>
+                                <p class="card-text mb-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident adipisci, quas saepe repudiandae neque mollitia possimus. </p>
+                                <button type="button" class="btn btn-danger mt-3">Saiba mais</button>
+                            </div>
+                            <img class="card-img-right flex-auto d-none d-lg-block" width="37.5%" src="img/not9.jpg" alt="Card image cap">
+                        </div>
+                    </div>
+                </div>
 
-    <!--codigo movimentaçao-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js"></script>
-    <script>
-        let sliderSelector = '.swiper-container',
-            options = {
-                loop: true,
-                speed: 800,
-                slidesPerView: 2, // or 'auto'
-                spaceBetween: 20,
-                centeredSlides: true,
-                effect: 'coverflow', // 'cube', 'fade', 'coverflow',
-                coverflowEffect: {
-                    rotate: 50, // Slide rotate in degrees
-                    stretch: 0, // Stretch space between slides (in px)
-                    depth: 50, // Depth offset in px (slides translate in Z axis)
-                    modifier: 1, // Effect multipler
-                    slideShadows: true // Enables slides shadows
-                },
-                grabCursor: true,
-                parallax: true,
-                on: {
-                    imagesReady: function() {
-                        this.el.classList.remove('loading');
-                    }
-                }
-            };
-        let mySwiper = new Swiper(sliderSelector, options);
-        mySwiper.init();
-    </script>
-    <!--Fim-->
-
-    <script>
-        (function() {
-
-            var nav = $('nav'),
-                menu = $('nav h1'),
-                main = $('main'),
-                open = false,
-                hover = false;
-
-            menu.on('click', function() {
-                open = !open ? true : false;
-                nav.toggleClass('menu-active');
-                main.toggleClass('menu-active');
-                nav.removeClass('menu-hover');
-                main.removeClass('menu-hover');
-                console.log(open);
-            });
-            menu.hover(
-                function() {
-                    if (!open) {
-                        nav.addClass('menu-hover');
-                        main.addClass('menu-hover');
-                    }
-                },
-                function() {
-                    nav.removeClass('menu-hover');
-                    main.removeClass('menu-hover');
-                }
-            );
-
-        })();
-    </script>
+                <div class="col-md-3 col-12">
+                    <div id="cont_44f1eedac20bc737edde77a38381cb6d">
+                        <script type="text/javascript" async src="https://www.tempo.com/wid_loader/44f1eedac20bc737edde77a38381cb6d"></script>
+                    </div>
+                </div>
 
 
 
 
+                <footer class="pt-4 my-md-5 pt-md-5 border-top">
+                    <div class="row">
+                        <div class="col-12 col-md">
+                            <img class="mb-2" src="img/logo.png" alt="" width="84">
+                            <small class="d-block mb-3 text-muted">&copy; 2020-2021</small>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5 class=" text-danger">Features</h5>
+                            <ul class="list-unstyled text-small">
+                                <li><a class="text-muted" href="#">Algo legal</a></li>
+                                <li><a class="text-muted" href="#">Feature aleatória</a></li>
+                                <li><a class="text-muted" href="#">Recursos para times</a></li>
+                                <li><a class="text-muted" href="#">Coisas para desenvolvedores</a></li>
+                                <li><a class="text-muted" href="#">Outra coisa legal</a></li>
+                                <li><a class="text-muted" href="#">Último item</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5 class="text-danger">Fontes</h5>
+                            <ul class="list-unstyled text-small">
+                                <li><a class="text-muted" href="#">Fonte</a></li>
+                                <li><a class="text-muted" href="#">Nome da fonte</a></li>
+                                <li><a class="text-muted" href="#">Outra fonte</a></li>
+                                <li><a class="text-muted" href="#">Fonte final</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5 class="text-danger">Sobre</h5>
+                            <ul class="list-unstyled text-small">
+                                <li><a class="text-muted" href="#">Equipe</a></li>
+                                <li><a class="text-muted" href="#">Locais</a></li>
+                                <li><a class="text-muted" href="#">Privacidade</a></li>
+                                <li><a class="text-muted" href="#">Termos</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+
+            <!--codigo movimentaçao-->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js"></script>
+            <script>
+                let sliderSelector = '.swiper-container',
+                    options = {
+                        loop: true,
+                        speed: 800,
+                        slidesPerView: 2, // or 'auto'
+                        spaceBetween: 20,
+                        centeredSlides: true,
+                        effect: 'coverflow', // 'cube', 'fade', 'coverflow',
+                        coverflowEffect: {
+                            rotate: 50, // Slide rotate in degrees
+                            stretch: 0, // Stretch space between slides (in px)
+                            depth: 50, // Depth offset in px (slides translate in Z axis)
+                            modifier: 1, // Effect multipler
+                            slideShadows: true // Enables slides shadows
+                        },
+                        grabCursor: true,
+                        parallax: true,
+                        on: {
+                            imagesReady: function() {
+                                this.el.classList.remove('loading');
+                            }
+                        }
+                    };
+                let mySwiper = new Swiper(sliderSelector, options);
+                mySwiper.init();
+            </script>
+            <!--Fim-->
+
+            <script>
+                (function() {
+
+                    var nav = $('nav'),
+                        menu = $('nav h1'),
+                        main = $('main'),
+                        open = false,
+                        hover = false;
+
+                    menu.on('click', function() {
+                        open = !open ? true : false;
+                        nav.toggleClass('menu-active');
+                        main.toggleClass('menu-active');
+                        nav.removeClass('menu-hover');
+                        main.removeClass('menu-hover');
+                        console.log(open);
+                    });
+                    menu.hover(
+                        function() {
+                            if (!open) {
+                                nav.addClass('menu-hover');
+                                main.addClass('menu-hover');
+                            }
+                        },
+                        function() {
+                            nav.removeClass('menu-hover');
+                            main.removeClass('menu-hover');
+                        }
+                    );
+
+                })();
+            </script>
 
 
 
@@ -248,11 +297,15 @@
 
 
 
-    <!-- JavaScript (Opcional) -->
-    <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+
+
+
+            <!-- JavaScript (Opcional) -->
+            <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
