commit mudanças dia 18-5

--- a/exercicio.html
+++ b/exercicio.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.1/css/swiper.min.css" />
     <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" />
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700i" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
     <style>
@@ -170,6 +171,15 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-3 col-12 reser">
+                    <div class="col-12">
+                        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
+                        <h2 class=" ml-4">Título</h2>
+                        <p><button type="button" class="btn btn-danger mt-1 ml-3">Saiba mais</button></p>
+                    </div>
+                </div>
+
                 <hr width="60%">
                 <div class="conteiner-fluid ">
                     <div class="row mb-2">
@@ -192,6 +202,20 @@
 
 
 
+
+
+
+                    <div class="icon-bar">
+                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="#" class="google"><i class="fa fa-google"></i></a>
+                        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                        <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+                    </div>
+
+                    <!--Paginação-->
+
+                    <!--fim-->
 
 
                     <footer class="pt-4 my-md-5 pt-md-5 border-top">
@@ -233,7 +257,7 @@
                     </footer>
                 </div>
 
-                <!--codigo movimentaçao-->
+                <!--codigo movimentaçao slide-->
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js"></script>
                 <script>
                     let sliderSelector = '.swiper-container',
@@ -264,6 +288,7 @@
                 </script>
                 <!--Fim-->
 
+                <!--script menu-->
                 <script>
                     (function() {
 
@@ -296,7 +321,7 @@
 
                     })();
                 </script>
-
+                <!--fim -->
 
 
 
