commit finalizaçao dia 18-5

--- a/exercicio.html
+++ b/exercicio.html
@@ -152,6 +152,9 @@
                         <p class="mb-0 ">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur Lorem ipsum dolor sit amet. </p>
 
                     </div>
+                    <br>
+                    <br>
+                    <h4 class="border-left border-bottom border-danger ml-2">ÚLTIMOS REVIEWS</h4>
             </div>
             <hr width="60%">
             <div class="conteiner-fluid ">
@@ -170,16 +173,17 @@
                             <img class="card-img-right flex-auto d-none d-lg-block" width="37.5%" src="img/not8.jpg" alt="Card image cap">
                         </div>
                     </div>
-                </div>
-
-                <div class="col-md-3 col-12 reser">
-                    <div class="col-12">
-                        <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-                        <h2 class=" ml-4">Título</h2>
-                        <p><button type="button" class="btn btn-danger mt-1 ml-3">Saiba mais</button></p>
+                    <br>
+                    <br>
+                    <div class="col-md-3 col-12 reser">
+                        <div class="col-12">
+                            <img class="rounded-circle ml-4 border border-danger" src="img/not10.jpg" alt="Generic placeholder image" width="140" height="140">
+                            <h2 class=" ml-0">Pro Skater 3+</h2>
+                            <p><button type="button" class="btn btn-danger mt-1 ml-5">Saiba mais</button></p>
+                        </div>
                     </div>
                 </div>
-
+                <br>
                 <hr width="60%">
                 <div class="conteiner-fluid ">
                     <div class="row mb-2">
@@ -197,131 +201,139 @@
                                 <img class="card-img-right flex-auto d-none d-lg-block" width="37.5%" src="img/not9.jpg" alt="Card image cap">
                             </div>
                         </div>
-                    </div>
-
-
-
-
-
-
-
-                    <div class="icon-bar">
-                        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="#" class="google"><i class="fa fa-google"></i></a>
-                        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                        <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
-                    </div>
-
-                    <!--Paginação-->
-
-                    <!--fim-->
-
-
-                    <footer class="pt-4 my-md-5 pt-md-5 border-top">
-                        <div class="row">
-                            <div class="col-12 col-md">
-                                <img class="mb-2" src="img/logo.png" alt="" width="84">
-                                <small class="d-block mb-3 text-muted">&copy; 2020-2021</small>
-                            </div>
-                            <div class="col-6 col-md">
-                                <h5 class=" text-danger">Features</h5>
-                                <ul class="list-unstyled text-small">
-                                    <li><a class="text-muted" href="#">Algo legal</a></li>
-                                    <li><a class="text-muted" href="#">Feature aleatória</a></li>
-                                    <li><a class="text-muted" href="#">Recursos para times</a></li>
-                                    <li><a class="text-muted" href="#">Coisas para desenvolvedores</a></li>
-                                    <li><a class="text-muted" href="#">Outra coisa legal</a></li>
-                                    <li><a class="text-muted" href="#">Último item</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-6 col-md">
-                                <h5 class="text-danger">Fontes</h5>
-                                <ul class="list-unstyled text-small">
-                                    <li><a class="text-muted" href="#">Fonte</a></li>
-                                    <li><a class="text-muted" href="#">Nome da fonte</a></li>
-                                    <li><a class="text-muted" href="#">Outra fonte</a></li>
-                                    <li><a class="text-muted" href="#">Fonte final</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-6 col-md">
-                                <h5 class="text-danger">Sobre</h5>
-                                <ul class="list-unstyled text-small">
-                                    <li><a class="text-muted" href="#">Equipe</a></li>
-                                    <li><a class="text-muted" href="#">Locais</a></li>
-                                    <li><a class="text-muted" href="#">Privacidade</a></li>
-                                    <li><a class="text-muted" href="#">Termos</a></li>
-                                </ul>
+                        <div class="col-md-3 col-12 reser">
+                            <div class="col-12">
+                                <img class="rounded-circle ml-4 border border-danger" src="img/not11.jpg" alt="Generic placeholder image" width="140" height="140">
+                                <h2 class=" ml-4">Fallout 76</h2>
+                                <p><button type="button" class="btn btn-danger mt-1 ml-5">Saiba mais</button></p>
                             </div>
                         </div>
-                    </footer>
+                    </div>
                 </div>
 
-                <!--codigo movimentaçao slide-->
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js"></script>
-                <script>
-                    let sliderSelector = '.swiper-container',
-                        options = {
-                            loop: true,
-                            speed: 800,
-                            slidesPerView: 2, // or 'auto'
-                            spaceBetween: 20,
-                            centeredSlides: true,
-                            effect: 'coverflow', // 'cube', 'fade', 'coverflow',
-                            coverflowEffect: {
-                                rotate: 50, // Slide rotate in degrees
-                                stretch: 0, // Stretch space between slides (in px)
-                                depth: 50, // Depth offset in px (slides translate in Z axis)
-                                modifier: 1, // Effect multipler
-                                slideShadows: true // Enables slides shadows
-                            },
-                            grabCursor: true,
-                            parallax: true,
-                            on: {
-                                imagesReady: function() {
-                                    this.el.classList.remove('loading');
-                                }
+
+
+
+
+
+
+                <div class="icon-bar">
+                    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+                    <a href="#" class="google"><i class="fa fa-google"></i></a>
+                    <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+                    <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+                </div>
+
+                <!--Paginação-->
+
+                <!--fim-->
+
+
+                <footer class="pt-4 my-md-5 pt-md-5 border-top">
+                    <div class="row">
+                        <div class="col-12 col-md">
+                            <img class="mb-2" src="img/logo.png" alt="" width="84">
+                            <small class="d-block mb-3 text-muted">&copy; 2020-2021</small>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5 class=" text-danger">Features</h5>
+                            <ul class="list-unstyled text-small">
+                                <li><a class="text-muted" href="#">Algo legal</a></li>
+                                <li><a class="text-muted" href="#">Feature aleatória</a></li>
+                                <li><a class="text-muted" href="#">Recursos para times</a></li>
+                                <li><a class="text-muted" href="#">Coisas para desenvolvedores</a></li>
+                                <li><a class="text-muted" href="#">Outra coisa legal</a></li>
+                                <li><a class="text-muted" href="#">Último item</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5 class="text-danger">Fontes</h5>
+                            <ul class="list-unstyled text-small">
+                                <li><a class="text-muted" href="#">Fonte</a></li>
+                                <li><a class="text-muted" href="#">Nome da fonte</a></li>
+                                <li><a class="text-muted" href="#">Outra fonte</a></li>
+                                <li><a class="text-muted" href="#">Fonte final</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-6 col-md">
+                            <h5 class="text-danger">Sobre</h5>
+                            <ul class="list-unstyled text-small">
+                                <li><a class="text-muted" href="#">Equipe</a></li>
+                                <li><a class="text-muted" href="#">Locais</a></li>
+                                <li><a class="text-muted" href="#">Privacidade</a></li>
+                                <li><a class="text-muted" href="#">Termos</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+
+            <!--codigo movimentaçao slide-->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.1/js/swiper.min.js"></script>
+            <script>
+                let sliderSelector = '.swiper-container',
+                    options = {
+                        loop: true,
+                        speed: 800,
+                        slidesPerView: 2, // or 'auto'
+                        spaceBetween: 20,
+                        centeredSlides: true,
+                        effect: 'coverflow', // 'cube', 'fade', 'coverflow',
+                        coverflowEffect: {
+                            rotate: 50, // Slide rotate in degrees
+                            stretch: 0, // Stretch space between slides (in px)
+                            depth: 50, // Depth offset in px (slides translate in Z axis)
+                            modifier: 1, // Effect multipler
+                            slideShadows: true // Enables slides shadows
+                        },
+                        grabCursor: true,
+                        parallax: true,
+                        on: {
+                            imagesReady: function() {
+                                this.el.classList.remove('loading');
                             }
-                        };
-                    let mySwiper = new Swiper(sliderSelector, options);
-                    mySwiper.init();
-                </script>
-                <!--Fim-->
+                        }
+                    };
+                let mySwiper = new Swiper(sliderSelector, options);
+                mySwiper.init();
+            </script>
+            <!--Fim-->
 
-                <!--script menu-->
-                <script>
-                    (function() {
+            <!--script menu-->
+            <script>
+                (function() {
 
-                        var nav = $('nav'),
-                            menu = $('nav h1'),
-                            main = $('main'),
-                            open = false,
-                            hover = false;
+                    var nav = $('nav'),
+                        menu = $('nav h1'),
+                        main = $('main'),
+                        open = false,
+                        hover = false;
 
-                        menu.on('click', function() {
-                            open = !open ? true : false;
-                            nav.toggleClass('menu-active');
-                            main.toggleClass('menu-active');
+                    menu.on('click', function() {
+                        open = !open ? true : false;
+                        nav.toggleClass('menu-active');
+                        main.toggleClass('menu-active');
+                        nav.removeClass('menu-hover');
+                        main.removeClass('menu-hover');
+                        console.log(open);
+                    });
+                    menu.hover(
+                        function() {
+                            if (!open) {
+                                nav.addClass('menu-hover');
+                                main.addClass('menu-hover');
+                            }
+                        },
+                        function() {
                             nav.removeClass('menu-hover');
                             main.removeClass('menu-hover');
-                            console.log(open);
-                        });
-                        menu.hover(
-                            function() {
-                                if (!open) {
-                                    nav.addClass('menu-hover');
-                                    main.addClass('menu-hover');
-                                }
-                            },
-                            function() {
-                                nav.removeClass('menu-hover');
-                                main.removeClass('menu-hover');
-                            }
-                        );
+                        }
+                    );
 
-                    })();
-                </script>
-                <!--fim -->
+                })();
+            </script>
+            <!--fim -->
 
 
 
@@ -333,11 +345,11 @@
 
 
 
-                <!-- JavaScript (Opcional) -->
-                <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+            <!-- JavaScript (Opcional) -->
+            <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
